unpackaged/main/default/objects/litify_docs__Input_Form_Field__c/litify_docs__Input_Form_Field__c.object-meta.xml
<CustomObject>
    <label>Merge Input Form Field</label>
    <nameField>
        <label>Merge Input Form Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Input Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>