unpackaged/main/default/objects/litify_docs__Input_Form_Field__c/fields/litify_docs__Child_Input__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Child_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge Input</label>
    <referenceTo>litify_docs__Input__c</referenceTo>
    <relationshipLabel>Merge Input Form Fields (Merge Input)</relationshipLabel>
    <relationshipName>Merge_Input_Form_Fields1</relationshipName>
    <type>Lookup</type>
</CustomField>