unpackaged/main/default/objects/litify_docs__Input_Form_Field__c/fields/litify_docs__Input__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Input__c</fullName>
    <label>Merge Input</label>
    <referenceTo>litify_docs__Input__c</referenceTo>
    <relationshipLabel>Merge Input Form Fields</relationshipLabel>
    <relationshipName>Merge_Input_Form_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>