unpackaged/main/default/objects/litify_docs__Input_Form_Field__c/fields/litify_docs__Template__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Template__c</fullName>
    <label>Merge Template</label>
    <referenceTo>litify_docs__Template__c</referenceTo>
    <relationshipLabel>Merge Input Form Fields</relationshipLabel>
    <relationshipName>Merge_Input_Form_Fields</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>